HTTP_Routing/2.7_HTTPRouteMatch_HeaderRegex/gw-http-route_iRule.yaml
# 2.7 iRule 우회. native headers RegularExpression 미적용.
# TMM pool 이름: web-pool-<Pool.name>-pool
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class
  addresses:
    - type: IPAddress
      value: 40.30.20.20
  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-regex-irule-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener
  hostnames:
    - tea.f5bnk.com
  rules:
    - backendRefs:
        - name: httpbin-pool
          kind: Pool
          group: k8s.f5net.com
          weight: 1
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com
          weight: 1
